crates/tui/tests/storybook/snapshots/app_message::compaction_preview_waiting_for_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 64 8
  0   0  63 attrs=dim
  3   0   6 fg=AnsiValue(208) attrs=bold
  3   6  19 fg=AnsiValue(244)
  3  25   2 fg=AnsiValue(244) attrs=dim
  3  27  35 fg=AnsiValue(244)
  4   0  64 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  64 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  46 bg=AnsiValue(233)
  7  56   8 fg=AnsiValue(244) bg=AnsiValue(233)
