crates/tui/tests/storybook/snapshots/app_message::reasoning_summary_titles_update_thinking_block.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Confirming audit and accounting table retention
│ … 1 line collapsed …






─ ✿ working… ───────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                                   1:1 100%
