crates/tui/tests/storybook/snapshots/app_message::reasoning_summary_titles_update_thinking_block.peek.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Confirming audit and accounting table retention
│ The accounting table is still required.






─ ✿ working… ───────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                                   1:1 100%
