crates/tui/tests/storybook/snapshots/app_message::text_block_code_fence_no_language.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
Raw output:

hello
world

Done.


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal
