crates/tui/tests/storybook/snapshots/app_message::text_block_plain.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
hello, world.







─ ✿ working… ────────────────────────  ─

────────────────────────────────────────
